# fb.beamSection

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/1_single_material_elliptical/: single_material_elliptical_sections.ipynb  warping_example.ipynb
examples/2_bimaterial_circular/: bimaterial_circular_section.ipynb
examples/3_single_material_open_sections/: assymetric_open_section.ipynb  asymmetric_open_section.ipynb  single_material_open_section.ipynb
examples/4_single_material_multicell/: single_material_multicell.ipynb
examples/5_wing_torsion_box/: _wing_torsion_box_profiler.ipynb  wing_torsion_box.ipynb  wing_torsion_box_all_cases.ipynb
exemples/1_single_material_elliptical/: warping_example.ipynb
exemples/3_single_material_open_sections/: single_material_open_section.ipynb
exemples/4_single_material_multicell/: single_material_multicell.ipynb
exemples/5_wing_torsion_box/: wing_torsion_box.ipynb  wing_torsion_box_all_cases.ipynb
mesh_files/: MAT-fem_Python_Multimat_dens.bas  mult_Q9_1280e.py  mult_Q9_184e.py  mult_Q9_1880e.py  mult_Q9_2244e.py  mult_Q9_400e.py  mult_Q9_624e.py  mult_Q9_88e.py
notebooks/: gid_mesh_tutorial.md  multicell_profile_example.ipynb  perfil_multicelular_exemplo.ipynb
notebooks/.ipynb_checkpoints/: multicell_profile_example-checkpoint.ipynb  perfil_multicelular_exemplo-checkpoint.ipynb
sources/: AeronauticalElements.py  StructuralElements.py
sources/.ipynb_checkpoints/: FEM_Secao2D-checkpoint.py
src/FlightBEND/: __init__.py  beam_section.py  fem_BCs.py  fem_geometry.py
(+226 files in other folders)
