[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name 		= "FlightBEND"
version 	= "1.0.2"
description = "A Python package for flexible body dynamics simulation of airframes"
readme 		= "README.md"
authors 	= [{ name = "Pedro Pires", email = "pfmppedro@gmail.com" },{ name = "Tiago Buriol", email = "tiago.buriol@ufsm.br" }]
license 	= { text = "MIT" }
requires-python = ">=3.11"
dependencies = ["numpy>=1.24.3",
				"matplotlib>=3.7.2",
				"scipy>=1.11.1",
				"nptyping>=2.5.0",
]

[project.scripts]
flightbend = "flightbend.main:main"
